Implement Create Music Track API
